# tds_app

./: .gitignore  BATCH_FILE_IMPROVEMENTS.md  BUG_FIXES_SUMMARY.md  Hardcoded Vendors.csv  README.md  freeze.py  ledger_tds_sections.csv  pyproject.toml  tds_rates.csv  tds_section_mapping.csv
tds_app/: cli.py  logging_config.py
tds_app/config/: settings.py
tds_app/steps/: run_tds_pipeline.py  step0_fetch_odbc.py  step1_tds_section_mapper.py  step2_prepare_expense_data.py  step3_tdspayable_reco.py  step4_parse_26q.py  step5_tds_reconciliation.py
